# al2o3_thread

./: CMakeLists.txt  LICENSE
include/al2o3_thread/: atomic.h  thread.h  thread.hpp
include/al2o3_thread/impl/: atomic_gcc_x64.h  atomic_msvc.h
src/posix/: thread.c
src/windows/: thread.c
tests/: runner.cpp  test_thread.cpp
